--- a/.github/workflows/azure-pipeline.yml
+++ b/.github/workflows/azure-pipeline.yml
@@ -21,6 +21,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Output Github context
+        run: echo"${{ toJSON(github) }}
       - uses: actions/checkout@v3
       - uses: azure/login@v1
         name: Sign in to Azure
